@@ -10,6 +10,12 @@ class ErrorApplication < Olag::Application
     super { @errors << "Oops!" }
   end
 
+  # Test minimal number of arguments.
+  def parse_arguments
+    expect_at_least(2, "fake arguments")
+    expect_at_most(3, "fake arguments")
+  end
+
 end
 
 # Test running a Olag Application.
@@ -21,9 +27,19 @@ class TestRunApplication < Test::Unit::TestCase
     Olag::Application.with_argv([]) { Olag::Application.new(true).run }.should == 0
   end
 
+  def test_inexact_arguments
+    Olag::Application.with_argv(%w(-e stderr foo)) { Olag::Application.new(true).run }.should == 1
+    File.read("stderr").should.include?("Expects no arguments")
+  end
+
+  def test_missing_arguments
+    Olag::Application.with_argv(%w(-e stderr foo)) { ErrorApplication.new(true).run }.should == 1
+    File.read("stderr").should.include?("Expects at least 2 fake arguments")
+  end
+
   def test_extra_arguments
-    Olag::Application.with_argv(%w(-e stderr dummy)) { Olag::Application.new(true).run }.should == 1
-    File.read("stderr").should.include?("Expects no command line file arguments")
+    Olag::Application.with_argv(%w(-e stderr foo bar baz bad)) { ErrorApplication.new(true).run }.should == 1
+    File.read("stderr").should.include?("Expects at most 3 fake arguments")
   end
 
   def test_print_version
@@ -37,7 +53,7 @@ class TestRunApplication < Test::Unit::TestCase
   end
 
   def test_print_errors
-    Olag::Application.with_argv(%w(-e stderr)) { ErrorApplication.new(true).run }.should == 1
+    Olag::Application.with_argv(%w(-e stderr foo bar)) { ErrorApplication.new(true).run }.should == 1
     File.read("stderr").should.include?("Oops!")
   end
 
