@@ -1,5 +1,6 @@
 2011-08-25	Oren Ben-Kiki <github-oren@ben-kiki.org>
 
+	* Utilities for verifing number of arguments.
 	* Additional utilities.
 
 2011-07-24	Oren Ben-Kiki <github-oren@ben-kiki.org>
